--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 		<title>Code-Jigsaw</title>
 		<link rel="stylesheet" href="styles/stylesheet.css">
         
-        <link rel="shortcut icon" href="images/codeadda_symbol.PNG">
+        <link rel="shortcut icon" href="images/codeadda_symbol.png">
         
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 		
