--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 		<title>Code-Jigsaw</title>
 		<link rel="stylesheet" href="styles/stylesheet.css">
         
-        <link rel="shortcut icon" href="images/codeadda_symbol.png">
+        <link rel="shortcut icon" href="images/codeadda-symbol.png">
         
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 		
@@ -14,12 +14,12 @@
 	
 	<body onload="beginTime()">
 		<div id="navbar" class="container-fluid">
-			<img src="images/codeadda_symbol.png"></img>
+			<img src="images/codeadda-symbol.png"></img>
 		</div>
 		
 		<div class="row">
 			<div id="left-puzzle" class="col-xs-8">
-				<img src="images/codeadda_symbol.png" id="hero_image">
+				<img src="images/codeadda-symbol.png" id="hero_image">
 				<div class="row1">
 					<div id="one"></div>
 					<div id="two"></div>
