--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                 <center><p>Code:</p></center>
                 <div class="col-xs-2"></div>
                 <div class="col-xs-8">
-                    <input id="uncode" type="password"><br><br>
+                    <input id="uncode" maxlength="8" type="password"><br><br>
                     <center><button id="go" onclick="open()">Go</button></center><br><br><br><br><br><br><br><br><br><br>
                 </div>
                 <div class="col-xs-2"></div>
